fix scroll shifting content

--- a/src/index.css
+++ b/src/index.css
@@ -17,5 +17,5 @@ code {
 }
 
 html {
-  overflow: auto;
+  overflow-y: scroll;
 }
